Bug 1195098. Null check for blurred source surface. r=mstange a=ritu